main.tf
provider "aws" {
  region = "ap-south-1"
}

# ------------------ KEY PAIR ------------------

resource "aws_key_pair" "deployer" {
  key_name   = "newssssss"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDHEUl3WWWPOJKfMekrHhqCjkg00zX85YlF4lUURw5Ax4Fh7uPQ4G6xTJUTAKrUr/DIPv+HEV0E66MwZtSSvtpg88p08pejP2ZUh3rdEJnkrz+d0dMbw+NVh4Hydf+HFNBB9whvdygY/GYMVmmORA8D7H1eevl8mjlg1VoWLKhyHzK/mlbor6AGGTCVxyzh1StJL3b72yLsWU5u3NTTXpo1oWTJ0ONYDrAmmd1Q05VtUCMvzlrghHGd6FUjz4vGqlA7n2jexrE27Tn/TH556kCsNMcm3Q7K527uJojkJyA6nwWNJ5cnbCT0zMj21oai45jwfR4W7/G6KnyIz1opgbKXeThRnZc98JFEt31+nPY/s1pDf6mrFLEqJT8pt+g8Qsdtzfo58VIfVfBf1q6ea64qUvJcCqCxwZEIbaAIY6v1yAVadt11zlyLyk+XJ1qr [...]
}

# ------------------ SECURITY GROUP ------------------

resource "aws_security_group" "allow_ports" {
  name        = "allow_ssh_http_newsssss"
  description = "Allow SSH, HTTP, and Jenkins"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "App Port"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Ananth-SG"
  }
}

# ------------------ EC2 INSTANCE ------------------

resource "aws_instance" "ubuntu" {
  ami                         = "ami-0f5ee92e2d63afc18"
  instance_type               = "t3.micro"
  key_name                    = aws_key_pair.deployer.key_name
  vpc_security_group_ids      = [aws_security_group.allow_ports.id]
  associate_public_ip_address = true

  tags = {
    Name = "Ananth-EC2"
  }
}

# ------------------ OUTPUT ------------------

output "instance_public_ip" {
  description = "Public IP of EC2 instance"
  value       = aws_instance.ubuntu.public_ip
}
